--- a/src/css/style.css
+++ b/src/css/style.css
@@ -356,6 +356,7 @@ input[type="checkbox"].switch_1:checked:after{
     position: absolute;
     right: 100px;
     top:350px;
+    max-width: 300px;
 }
 
 .exchange-rates .currency-container {
